# cah

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
cah/: __init__.py  cli.py  database.py  db.py  decks.py  export.py  gui.py  models.py
cah-nuxt/: drizzle.config.ts  nuxt.config.ts  package.json
cah-nuxt/app/: app.vue
cah-nuxt/app/components/: RandomCombo.vue
cah-nuxt/app/components/card/: CardFrame.vue  CardGrid.vue
cah-nuxt/app/components/deck/: DeckList.vue  DeckSidebar.vue
cah-nuxt/app/components/modal/: AddCardModal.vue  BatchAddModal.vue  BrowseCardsModal.vue  ConfirmModal.vue  DeckSettingsModal.vue  EditCardModal.vue  NewDeckModal.vue
cah-nuxt/app/composables/: useCards.ts  useConfirm.ts  useDeck.ts  usePagination.ts  useRandomCombo.ts
cah-nuxt/app/pages/: export.vue  index.vue  random.vue
cah-nuxt/app/pages/deck/: [id].vue
cah-nuxt/server/api/cards/: [id].delete.ts  [id].put.ts  batch.post.ts  copy.post.ts  index.get.ts  index.post.ts  search.get.ts
cah-nuxt/server/api/decks/: [id].delete.ts  [id].get.ts  [id].put.ts  index.get.ts  index.post.ts
cah-nuxt/server/api/decks/[id]/: duplicate.post.ts
cah-nuxt/server/api/export/: pdf.post.ts  text.post.ts
cah-nuxt/server/api/random/: combo.get.ts
cah-nuxt/server/api/settings/: default-deck.get.ts  default-deck.put.ts
cah-nuxt/server/api/upload/: logo.post.ts
cah-nuxt/server/database/: index.ts  schema.ts
cah-nuxt/server/database/migrations/: 0000_magical_meteorite.sql
cah-nuxt/server/utils/: pdf.ts
cah-nuxt/types/: index.ts
(+2 files in other folders)
